--- a/style.css
+++ b/style.css
@@ -1,4 +1,91 @@
 #map { 
-  height: 800px; 
-  width:100%;
+	border-style: solid;
+	border-width: 5px;
+	border-color: #04b0b6;
+	flex: 1;
 } 
+
+h1 {
+	font-family: 'Comfortaa', cursive;
+	font-weight: 700;
+	height: 5vh;
+	margin: 0px;
+}
+
+#textmain { 
+	font-family: 'Comfortaa', cursive;
+	font-weight: 400;
+} 
+
+
+.container {
+	display: flex;
+	width: 100%;
+	height: 95vh;
+}
+
+#textbox {
+	flex: 0.35;
+	padding: 8px;
+}
+
+.legends>li {
+	display: flex;
+	align-items: center;
+	margin-bottom: 0.7rem;
+}
+
+.legends>li>div {
+	background-color: red;
+	width: 2.5rem;
+	height: 2.5rem;
+	border-style: solid;
+	border-width: 5px;
+	border-radius: 5px;
+	margin-right: 0.3rem;
+}
+
+.legends>li>div.Odeonpark {
+	background-color: #ff00ff;
+}
+
+.legends>li>div.park {
+	background-color: #16bf38;
+}
+
+.legends>li>div.sport {
+	background-color: #00600b;
+}
+
+.legends>li>div.supermarkt {
+	background-color: #f6ff02;
+}
+
+.legends>li>div.horeca {
+	background-color: #ffa5cd;
+}
+
+.legends>li>div.uitgaan {
+	background-color: #ff0061;
+}
+
+.legends>li>div.coffeeshop {
+	background-color: #ffa100;
+}
+
+.legends>li>div.hogeschool {
+	background-color: #0015ff;
+}
+
+.legends>li>div.basisschool {
+	background-color: #008cff;
+}
+
+.legends>li>div.kinderopvang {
+	background-color: #01ffe5;
+}
+
+.legends>li>span {
+	font-family: 'Comfortaa', cursive;
+	font-weight: 400;
+}
